@@ -1,3 +1,15 @@
+2021-06-30  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed, reverting r279155.
+
+        Caused a PLT5 regression
+
+        Reverted changeset:
+
+        "[macOS] Suspend WebProcesses that are in the process cache"
+        https://bugs.webkit.org/show_bug.cgi?id=227269
+        https://commits.webkit.org/r279155
+
 2021-06-30  Youenn Fablet  <youenn@apple.com>
 
         [Cocoa] Migrate WebRTC UDP socket handling to NW API
